--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </button>
           </a>
         </div>
-        <a class="btn btn-dark px-3" href="https://github.com/Abhinavkar/SITHUB_HO" role="button"
+        <a class="btn btn-dark px-3" href="https://github.com/nileshkr17/sithub-" role="button"
           style="color: white;"><i class="fab fa-github"></i></a>
       </div>
 
@@ -158,11 +158,9 @@
         </div>
         <div class="row align-items-center mb-5">
           <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-            <h2 class="font-weight-light">Developing an open-source platform</h2>
-            <p class="font-italic text-muted mb-4">to share deails and informations about all the events and Student
-              activities that
-              are conducted in the college campus.
-            </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
+            <h2 class="font-weight-light">One of the top 6 Projects🎉 </h2>
+            <p class="font-italic text-muted mb-4">HACK-OVERFLOW 2022 organised by SWITCH
+            </p><a href="https://github.com/nileshkr17/sithub-" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
           </div>
           <div class="col-lg-5 px-5 mx-auto order-1 img- order-lg-2"><img
               src="icons\achievement.png" alt="" class="img-fluid mb-4 mb-lg-0">
@@ -394,7 +392,7 @@
 
     <div class="container mt-5 mb-3">
       <footer class="footer">
-        <p class="text-center text-muted">© 2022 Made with ❤️ by <a href="https://github.com/Abhinavkar/SITHUB_HO">Team iNiT</a>
+        <p class="text-center text-muted">© 2022 Made with ❤️ by <a href="https://github.com/nileshkr17/sithub-">Team iNiT</a>
         </p>
       </footer>
     </div>
