--- a/index2.html
+++ b/index2.html
@@ -88,13 +88,13 @@
             </button>
           </a>
 
-          <a href="index.html" target="/blank">
+          <a href="login.html" target="/blank">
             <button type="button" class="btn px-3 me-3 btn-secondary" id="btn-logout">
-             Logout
+              Log Out
             </button>
           </a>
         </div>
-        <a class="btn btn-dark px-3" href="https://github.com/Abhinavkar/SITHUB_HO" role="button"
+        <a class="btn btn-dark px-3" href="https://github.com/nileshkr17/sithub-" role="button"
           style="color: white;"><i class="fab fa-github"></i></a>
       </div>
 
@@ -141,11 +141,11 @@
             </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
           </div>
           <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
-              src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0">
+              src="icons\manpc.png" alt="" class="img-fluid mb-4 mb-lg-0">
           </div>
         </div>
         <div class="row align-items-center">
-          <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt=""
+          <div class="col-lg-5 px-5 mx-auto"><img src="icons\contri.png" alt=""
               class="img-fluid mb-4 mb-lg-0"></div>
           <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
             <h2 class="font-weight-light">Want to help us by contributing?</h2>
@@ -156,7 +156,18 @@
               class="btn btn-light px-5 rounded-pill shadow-sm">Contribute Now</a>
           </div>
         </div>
+        <div class="row align-items-center mb-5">
+          <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
+            <h2 class="font-weight-light">One of the top 6 Projects🎉 </h2>
+            <p class="font-italic text-muted mb-4">HACK-OVERFLOW 2022 organised by SWITCH
+            </p><a href="https://github.com/nileshkr17/sithub-" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
+          </div>
+          <div class="col-lg-5 px-5 mx-auto order-1 img- order-lg-2"><img
+              src="icons\achievement.png" alt="" class="img-fluid mb-4 mb-lg-0">
+          </div>
+        </div>
       </div>
+      
     </div>
   </div>
 
@@ -252,10 +263,10 @@
           <button class="btn">Book Tickets</button>
         </div>
         <div class="carousel-item">
-          <img class="cinemax-img d-block w-100" src="https://images.indianexpress.com/2022/01/the-batman-1200-4.jpg" alt="Second slide">
+          <a href="https://www.youtube.com/watch?v=Rt_UqUm38BI"><img class="cinemax-img d-block w-100" src="https://images.indianexpress.com/2022/01/the-batman-1200-4.jpg"alt="Second slide"></a>
         </div>
         <div class="carousel-item">
-          <img class="cinemax-img d-block w-100" src="..." alt="Third slide">
+          <img class="cinemax-img d-block w-100" src="https://i.ytimg.com/vi/Rt_UqUm38BI/maxresdefault.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -381,7 +392,7 @@
 
     <div class="container mt-5 mb-3">
       <footer class="footer">
-        <p class="text-center text-muted">© 2022 Made with ❤️ by <a href="https://github.com/Abhinavkar/SITHUB_HO">Team iNiT</a>
+        <p class="text-center text-muted">© 2022 Made with ❤️ by <a href="https://github.com/nileshkr17/sithub-">Team iNiT</a>
         </p>
       </footer>
     </div>
