--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,27 @@
   <title>SITHUB | HOME</title>
   <link rel="icon" href="icons\favicon.png" type="image/icon type">
   <link rel="stylesheet" href="style.css">
+<!--
+  seo
 
+-->
+<meta
+name="description"
+content="Welcome to SITHUB. We're dedicated to giving you the best experience."
+/>
+<meta
+name="keywords"
+content="OpenSource, CommunityWork, OpenSourceDevelopment, Collaboration, Networking, Side-Projects, Projects, Hackathons, OpenSourcePrograms, Development, Webdev, ML, Android, Startup "
+/>
+<meta name="author" content="Sithub" />
+<meta property="og:title" content="Sithub" />
+<meta
+property="og:description"
+content="Welcome to SITHUB. We're dedicated to giving you the best experience."
+/>
+
+<!---
+seo-end-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <link href="icons\MIDPART.css" rel="stylesheet" />
