--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="login.html">
               <span class="navbar-brand mb-0 h1">SITHUB</span>
             </a>
           </li>
@@ -138,7 +138,7 @@
             <p class="font-italic text-muted mb-4">to share deails and informations about all the events and Student
               activities that
               are conducted in the college campus.
-            </p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
+            </p><a href="login.html" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
           </div>
           <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
               src="icons\manpc.png" alt="" class="img-fluid mb-4 mb-lg-0">
@@ -160,7 +160,7 @@
           <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
             <h2 class="font-weight-light">One of the top 6 Projects🎉 </h2>
             <p class="font-italic text-muted mb-4">HACK-OVERFLOW 2022 organised by SWITCH
-            </p><a href="https://github.com/nileshkr17/sithub-" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
+            </p><a href="login.html" class="btn btn-light px-5 rounded-pill shadow-sm">Know More</a>
           </div>
           <div class="col-lg-5 px-5 mx-auto order-1 img- order-lg-2"><img
               src="icons\achievement.png" alt="" class="img-fluid mb-4 mb-lg-0">
@@ -202,7 +202,7 @@
         <div class="club-card card mb-3">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
             <img src="icons\logo_switch.png" class="img-fluid" />
-            <a href="#!">
+            <a href="login.html">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
             </a>
           </div>
@@ -214,7 +214,7 @@
               If programming is your passion, then SWITCH Club is where you want to be.
               advanced coding skills among students, and keeps them informed of the latest trends. If programming is
               your passion, then SWITCH Club is where you want to be.
-              <button type="button" class="btn btn-primary"><a href="#">KNOW MORE</a></button>
+              <button type="button" class="btn btn-primary"><a href="login.html">KNOW MORE</a></button>
           </div>
           <div class="card-footer"> Updated 2 days ago</div>
         </div>
@@ -224,7 +224,7 @@
         <div class="club-card card mb-3">
           <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
             <img src="icons\logo_smc.png" class="img-fluid" />
-            <a href="#">
+            <a href="login.html">
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
             </a>
           </div>
@@ -263,7 +263,7 @@
           <button class="btn">Book Tickets</button>
         </div>
         <div class="carousel-item">
-          <a href="https://www.youtube.com/watch?v=Rt_UqUm38BI"><img class="cinemax-img d-block w-100" src="https://images.indianexpress.com/2022/01/the-batman-1200-4.jpg"alt="Second slide"></a>
+          <img class="cinemax-img d-block w-100" src="https://images.indianexpress.com/2022/01/the-batman-1200-4.jpg"alt="Second slide">
         </div>
         <div class="carousel-item">
           <img class="cinemax-img d-block w-100" src="https://i.ytimg.com/vi/Rt_UqUm38BI/maxresdefault.jpg" alt="Third slide">
