--- a/login.html
+++ b/login.html
@@ -42,9 +42,9 @@
         <br>
        <h3><center>Or</center></h3>
         <div id="btn" class="text-center">
-       <button type="button" class="btn btn-primary btn-circle btn-sm"><a href="coming.html"><i class="fa fa-facebook"></i></a></button>
-       <button type="button" class="btn btn-danger btn-circle btn-sm"><a href="index.php"><i class="fa fa-google"></i></button></a>
-       <button type="button" class="btn btn-primary btn-circle btn-sm"><a href="coming.html"><i class="fa fa-twitter"></i></a></button>
+       <button type="button" class="btn btn-primary btn-circle btn-sm"><a href="pages\coming.html"><i class="fa fa-facebook"></i></a></button>
+       <button type="button" class="btn btn-danger btn-circle btn-sm"><a href="pages\coming.html"><i class="fa fa-google"></i></button></a>
+       <button type="button" class="btn btn-primary btn-circle btn-sm"><a href="pages\coming.html"><i class="fa fa-twitter"></i></a></button>
        </div>
     
       </form>
