--- a/index2.html
+++ b/index2.html
@@ -280,7 +280,7 @@ seo-end-->
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="cinemax-img d-block w-100" src="https://i.ytimg.com/vi/IE8HIsIrq4o/maxresdefault.jpg" alt="First slide">
-          <button class="btn">Book Tickets</button>
+          <button class="btn" href="movie.html">Book Tickets</button>
         </div>
         <div class="carousel-item">
           <a href="https://www.youtube.com/watch?v=Rt_UqUm38BI"><img class="cinemax-img d-block w-100" src="https://images.indianexpress.com/2022/01/the-batman-1200-4.jpg"alt="Second slide"></a>
